Adding basic changes for shop

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,9 +40,14 @@
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
+  /* display: grid;
+  grid-template-columns: repeat(2, minmax(25%, auto));
   width: var(--max-width);
+  max-width: 100%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   max-width: 100%;
 }
 
@@ -81,7 +86,7 @@
 }
 
 .center::before {
-  background: var(--secondary-glow);
+  /* background: var(--secondary-glow); */
   border-radius: 50%;
   width: 480px;
   height: 360px;
