--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,6 +57,7 @@
   background: rgba(var(--card-rgb), 0);
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
+  text-align: center;
 }
 
 .card span {
