styling and refactoring into components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -104,18 +104,18 @@ a {
 button {
   margin-top: 10px;
   appearance: none;
-  background-color: #fafbfc;
+  background-color: #0597f2;
   border: 1px solid rgba(27, 31, 35, 0.15);
   border-radius: 6px;
-  box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0,
-    rgba(255, 255, 255, 0.25) 0 1px 0 inset;
+  /* box-shadow: rgba(27, 31, 35, 0.04) 0 1px 0,
+    rgba(255, 255, 255, 0.25) 0 1px 0 inset; */
   box-sizing: border-box;
-  color: #24292e;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system, system-ui, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
-  font-size: 14px;
+  font-size: 1rem;
   font-weight: 500;
   line-height: 20px;
   list-style: none;
@@ -128,10 +128,11 @@ button {
   vertical-align: middle;
   white-space: nowrap;
   word-wrap: break-word;
+  width: 100%;
 }
 
 button:hover {
-  background-color: #f3f4f6;
+  background-color: #0583f2;
   text-decoration: none;
   transition-duration: 0.1s;
 }
